--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ li {
     color: brown
 }
 
-border1px {
-    color: blue
+img {
+    width: 120px;
+    border-radius: 50;
+    border: 2px dotted green;
 }
